Fix spacing of Login and CreateAccount components, add in persistor.flush() in logout createAsyncThunk

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -342,6 +342,11 @@ justify-content: space-around;
   border-radius: 15%;
 }
 
+.search-btn:hover {
+  filter: brightness(90%);
+  cursor:pointer;
+}
+
 .search-txt form{
   display:flex;
   flex-direction: row;
